--- a/LogicForModelCategories/PredicateImplicationsForModelCategories.tex
+++ b/LogicForModelCategories/PredicateImplicationsForModelCategories.tex
@@ -1,5 +1,23 @@
 \begin{sequent}
 \begin{align*}
+\alpha:\Mor ~|~ \IsIsomorphism( \alpha ) \vdash \IsWeakEquivalence( \alpha )
+\end{align*}
+\end{sequent}
+
+\begin{sequent}
+\begin{align*}
+\alpha:\Mor ~|~ \IsIsomorphism( \alpha ) \vdash \IsFibration( \alpha )
+\end{align*}
+\end{sequent}
+\begin{sequent}
+
+\begin{align*}
+\alpha:\Mor ~|~ \IsIsomorphism( \alpha ) \vdash \IsCofibration( \alpha )
+\end{align*}
+\end{sequent}
+
+\begin{sequent}
+\begin{align*}
 \alpha:\Mor ~|~ \IsAcyclicFibration( \alpha ) \vdash \IsWeakEquivalence( \alpha )
 \end{align*}
 \end{sequent}
@@ -33,5 +51,7 @@
 \alpha:\Mor ~|~ \IsFibration( \alpha ), \IsWeakEquivalence( \alpha ) \vdash \IsAcyclicFibration( \alpha )
 \end{align*}
 \end{sequent}
+
+
 
 
