--- a/LogicForModelCategories/PropositionsForModelCategories.tex
+++ b/LogicForModelCategories/PropositionsForModelCategories.tex
@@ -72,3 +72,16 @@ a: \Obj ~|~ () \vdash \IsCofibration( \IdentityMorphism( a ) )
 \end{align*}
 \end{sequent}
 
+\begin{sequent}
+\begin{align*}
+a: \Obj ~|~ () \vdash \IsCofibrant( \CofibrantModel( a ) ) 
+\end{align*}
+\end{sequent}
+
+
+\begin{sequent}
+\begin{align*}
+a: \Obj ~|~ () \vdash \IsFibrant( \FibrantModel( a ) ) 
+\end{align*}
+\end{sequent}
+
